--- a/Produk/index.html
+++ b/Produk/index.html
@@ -52,9 +52,9 @@
       <nav class="flex justify-between py-8 text-[#005C4E]">
         <!-- Menu left -->
         <ul class="flex gap-[18px] items-center">
-          <li><a href="/index.html" class="hover:font-bold text-sm font-Plus-Jakarta-sans">Home</a></li>
-          <li><a href="/page/Produk/index.html" class="font-bold text-sm font-Plus-Jakarta-sans">Produk</a></li>
-          <li><a href="/page/blog/index.html" class="hover:font-bold text-sm font-Plus-Jakarta-sans">Blog</a></li>
+          <li><a href="/page/index.html" class="hover:font-bold text-sm font-Plus-Jakarta-sans">Home</a></li>
+          <li><a href="/Produk/index.html" class="font-bold text-sm font-Plus-Jakarta-sans">Produk</a></li>
+          <li><a href="/blog/index.html" class="hover:font-bold text-sm font-Plus-Jakarta-sans">Blog</a></li>
         </ul>
 
         <!-- Logo -->
@@ -66,8 +66,8 @@
         <!-- Menu Right -->
         <ul class="flex items-center gap-[18px]">
           <img src="image/Group 1597883047.png" class="h-6">
-          <img src="image/Group 1597883049.png" class="h-6">
-          <a href="/page/contact/index.html" class="hover:font-bold text-sm font-Plus-Jakarta-sans">Contact Us</a>
+          <a href="/Chackout/index.html"><img src="image/Group 1597883049.png" class="h-6"></a>
+          <a href="/contact/index.html" class="hover:font-bold text-sm font-Plus-Jakarta-sans">Contact Us</a>
         </ul>
 
       </nav>
@@ -237,166 +237,8 @@
           </div>
         </div>
       </div>
-    </div> -->
-      <div>
-        <a href="../Produk-detail/index.html"><img class="w-full" src="image/Rectangle 832 (5).png"></a>
-        <div class="py-5 px-[25px]">
-          <h1 class="font-bold text-black  pb-[12px]">Krim Wajah</h1>
-          <div class="lg:flex lg:pb-[33px] justify-between text-sm text-[#9A9A9A]">
-            <p>Face wach</p>
-            <p>Rp.500.000.-</p>
-          </div>
-        </div>
-      </div>
-
-
-
-      <div>
-        <img class="w-full" src="image/Rectangle 832 (2).png">
-        <div class="py-5 px-[25px]">
-          <h1 class="font-bold text-black  pb-[12px]">Krim Wajah</h1>
-          <div class="lg:flex lg:pb-[33px] justify-between text-sm text-[#9A9A9A]">
-            <p>Face wach</p>
-            <p>Rp.500.000.-</p>
-          </div>
-        </div>
-      </div>
-
-
-
-      <div>
-        <img class="w-full" src="image/Rectangle 832 (1).png">
-        <div class="py-5 px-[25px]">
-          <h1 class="font-bold text-black  pb-[12px]">Krim Wajah</h1>
-          <div class="lg:flex lg:pb-[33px] justify-between text-sm text-[#9A9A9A]">
-            <p>Face wach</p>
-            <p>Rp.500.000.-</p>
-          </div>
-        </div>
-      </div>
-
-
-
-      <div>
-
-        <img class="w-full" src="image/Rectangle 832.png">
-        <div class="py-5 px-[25px]">
-          <h1 class="font-bold text-black  pb-[12px]">Krim Wajah</h1>
-          <div class="lg:flex lg:pb-[33px] justify-between text-sm text-[#9A9A9A]">
-            <p>Face wach</p>
-            <p>Rp.500.000.-</p>
-          </div>
-        </div>
-      </div>
-
-
-      <div>
-
-        <a href="../Produk-detail/index.html"><img class="w-full" src="image/Rectangle 832 (5).png"></a>
-        <div class="py-5 px-[25px]">
-          <h1 class="font-bold text-black  pb-[12px]">Krim Wajah</h1>
-          <div class="lg:flex lg:pb-[33px] justify-between text-sm text-[#9A9A9A]">
-            <p>Face wach</p>
-            <p>Rp.500.000.-</p>
-          </div>
-        </div>
-      </div>
-
-
-
-      <div>
-        <img class="w-full" src="image/Rectangle 832 (2).png">
-        <div class="py-5 px-[25px]">
-          <h1 class="font-bold text-black  pb-[12px]">Krim Wajah</h1>
-          <div class="lg:flex lg:pb-[33px] justify-between text-sm text-[#9A9A9A]">
-            <p>Face wach</p>
-            <p>Rp.500.000.-</p>
-          </div>
-        </div>
-      </div>
-
-
-
-      <div>
-        <img class="w-full" src="image/Rectangle 832 (1).png">
-        <div class="py-5 px-[25px]">
-          <h1 class="font-bold text-black  pb-[12px]">Krim Wajah</h1>
-          <div class="lg:flex lg:pb-[33px] justify-between text-sm text-[#9A9A9A]">
-            <p>Face wach</p>
-            <p>Rp.500.000.-</p>
-          </div>
-        </div>
-      </div>
-
-
-
-      <div>
-
-        <img class="w-full" src="image/Rectangle 832.png">
-        <div class="py-5 px-[25px]">
-          <h1 class="font-bold text-black  pb-[12px]">Krim Wajah</h1>
-          <div class="lg:flex lg:pb-[33px] justify-between text-sm text-[#9A9A9A]">
-            <p>Face wach</p>
-            <p>Rp.500.000.-</p>
-          </div>
-        </div>
-      </div>
-
-
-
-      <div>
-
-        <a href="../Produk-detail/index.html"><img class="w-full" src="image/Rectangle 832 (5).png"></a>
-        <div class="py-5 px-[25px]">
-          <h1 class="font-bold text-black  pb-[12px]">Krim Wajah</h1>
-          <div class="lg:flex lg:pb-[33px] justify-between text-sm text-[#9A9A9A]">
-            <p>Face wach</p>
-            <p>Rp.500.000.-</p>
-          </div>
-        </div>
-      </div>
-
-
-
-      <div>
-        <img class="w-full" src="image/Rectangle 832 (2).png">
-        <div class="py-5 px-[25px]">
-          <h1 class="font-bold text-black  pb-[12px]">Krim Wajah</h1>
-          <div class="lg:flex lg:pb-[33px] justify-between text-sm text-[#9A9A9A]">
-            <p>Face wach</p>
-            <p>Rp.500.000.-</p>
-          </div>
-        </div>
-      </div>
-
-
-
-      <div>
-        <img class="w-full" src="image/Rectangle 832 (1).png">
-        <div class="py-5 px-[25px]">
-          <h1 class="font-bold text-black  pb-[12px]">Krim Wajah</h1>
-          <div class="lg:flex lg:pb-[33px] justify-between text-sm text-[#9A9A9A]">
-            <p>Face wach</p>
-            <p>Rp.500.000.-</p>
-          </div>
-        </div>
-      </div>
-
-
-
-      <div>
-
-        <img class="w-full" src="image/Rectangle 832.png">
-        <div class="py-5 px-[25px]">
-          <h1 class="font-bold text-black  pb-[12px]">Krim Wajah</h1>
-          <div class="lg:flex lg:pb-[33px] justify-between text-sm text-[#9A9A9A]">
-            <p>Face wach</p>
-            <p>Rp.500.000.-</p>
-          </div>
-        </div>
-      </div>
-
     </div>
+     
   </div>
 
   <article class="container flex gap-4 justify-center pt-12 pb-[101px]">
