--- a/detailblog/index.html
+++ b/detailblog/index.html
@@ -46,14 +46,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,700&family=Poppins&display=swap" rel="stylesheet">
 <body>
-    <header class="container" >
+    <header class="container">
         <div class="pb-[28px]">
           <nav class="flex justify-between py-8 text-[#005C4E]">
             <!-- Menu left -->
             <ul class="flex gap-[18px] items-center">
-              <li><a href="/index.html" class="font-bold text-sm font-Plus-Jakarta-sans">Home</a></li>
-              <li><a href="./page/Produk/index.html" class="font-normal text-sm font-Plus-Jakarta-sans">Produk</a></li>
-              <li><a href="/page/blog/index.html" class="font-normal text-sm font-Plus-Jakarta-sans">Blog</a></li>
+              <li><a href="/page/index.html" class="hover:font-bold text-sm font-Plus-Jakarta-sans">Home</a></li>
+              <li><a href="/Produk/index.html" class="hover:font-bold text-sm font-Plus-Jakarta-sans">Produk</a></li>
+              <li><a href="/blog/index.html" class="font-bold text-sm font-Plus-Jakarta-sans">Blog</a></li>
             </ul>
     
             <!-- Logo -->
@@ -65,8 +65,8 @@
             <!-- Menu Right -->
             <ul class="flex items-center gap-[18px]">
               <img src="image/Group 1597883047.png" class="h-6">
-              <img src="image/Group 1597883049.png" class="h-6">
-              <a href="/page/contact/index.html" class="font-normal text-sm font-Plus-Jakarta-sans">Contact Us</a>
+              <a href="/Chackout/index.html"><img src="image/Group 1597883049.png" class="h-6"></a>
+              <a href="/contact/index.html" class="hover:font-bold text-sm font-Plus-Jakarta-sans">Contact Us</a>
             </ul>
     
           </nav>
@@ -217,8 +217,8 @@
                                                     src="./image/Ellipse 74.svg"></p>
                                             <p class="text-[#6E6E6E] text-xs leading-normal">10 Mins ago</p>
                                         </div>
-                                        <p class="text-[#595959] px-4 font-bold text-base leading-normal font-semibold">Permainan tradisional indonesia</p>
-                                        <p class="text-[#6E6E6E] text-xs px-4 leading-normal text-[#595959] font-bold"> 12 Agustus 2023 </p>
+                                        <p class="text-[#595959] px-4 font-bold text-base leading-normal ">Permainan tradisional indonesia</p>
+                                        <p class="text-[#6E6E6E] text-xs px-4 leading-normal  font-bold"> 12 Agustus 2023 </p>
                                         <p class="text-[#6E6E6E] leading-6 text-xs px-4  pb-6">Norem ipsum dolor sit amet, consectetur adipiscing elit.Norem ipsum dolor sit amet, </p>
                                     </div>
                                 </div>
@@ -230,8 +230,8 @@
                                                     src="./image/Ellipse 74.svg"></p>
                                             <p class="text-[#6E6E6E] text-xs leading-normal">10 Mins ago</p>
                                         </div>
-                                        <p class="text-[#595959] px-4 font-bold text-base leading-normal font-semibold">Permainan tradisional indonesia</p>
-                                        <p class="text-[#6E6E6E] text-xs px-4 leading-normal text-[#595959] font-bold"> 12 Agustus 2023 </p>
+                                        <p class="text-[#595959] px-4 font-bold text-base leading-normal ">Permainan tradisional indonesia</p>
+                                        <p class="text-[#6E6E6E] text-xs px-4 leading-normal font-bold"> 12 Agustus 2023 </p>
                                         <p class="text-[#6E6E6E] leading-6 text-xs px-4  pb-6">Norem ipsum dolor sit amet, consectetur adipiscing elit.Norem ipsum dolor sit amet, </p>
                                     </div>
                                 </div>
