--- a/Chackout/index.html
+++ b/Chackout/index.html
@@ -77,7 +77,7 @@
           <div class="flex gap-x-6 items-center">
             <label class="flex items-center gap-x-6">
               <input type="checkbox" name="" id="" class="w-6 h-6 hidden lg:block">
-              <img src="/image/Rectangle 832 (1).png" class="w-[81px] lg:w-[120px] h-[81px] lg:h-[120px]">
+              <img src="./image/Rectangle 832 (1).png" class="w-[81px] lg:w-[120px] h-[81px] lg:h-[120px]">
             </label>
             <div>
               <p class="text-xl lg:text-2xl font-bold ">Curology Body Wash</p>
@@ -101,7 +101,7 @@
           <div class="flex gap-x-6 items-center">
             <label class="flex items-center gap-x-6">
               <input type="checkbox" name="" id="" class="w-6 h-6 hidden lg:block">
-              <img src="/image/Rectangle 832 (2).png" class="w-[81px] lg:w-[120px] h-[81px] lg:h-[120px]">
+              <img src="./image/Rectangle 832 (2).png" class="w-[81px] lg:w-[120px] h-[81px] lg:h-[120px]">
             </label>
             <div>
               <p class="text-xl lg:text-2xl font-bold ">Curology Body Wash</p>
@@ -127,7 +127,7 @@
           <div class="flex gap-x-6 items-center">
             <label class="flex items-center gap-x-6">
               <input type="checkbox" name="" id="" class="w-6 h-6 hidden lg:block">
-              <img src="/image/Rectangle 832 (3).png" class="w-[81px] lg:w-[120px] h-[81px] lg:h-[120px]">
+              <img src="./image/Rectangle 832 (5).png" class="w-[81px] lg:w-[120px] h-[81px] lg:h-[120px]">
             </label>
             <div>
               <p class="text-xl lg:text-2xl font-bold ">Curology Body Wash</p>
